# imdb-swallower-bot

./: .env.sample  Cargo.toml  README.md
src/: lib.rs  main.rs
