[package]
name = "imdb-swallower-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
imdb-swallower = { path = "../imdb-swallower" }
tokio = { version = "1", features = ["full"] }
teloxide = { version = "0.10", features = ["macros", "auto-send"] }
dotenv = "0.15.0"
html-escape = "0.2.11"
